[gd_scene load_steps=8 format=3 uid="uid://cm3hi6issjxed"]

[ext_resource type="Script" path="res://Encounter/EncounterManager.gd" id="1_8s06h"]
[ext_resource type="PackedScene" uid="uid://dc8325ievdrwf" path="res://Encounter/Map/MapManager.tscn" id="2_ddvnd"]
[ext_resource type="PackedScene" uid="uid://ciqqittxst8qp" path="res://Encounter/Generator/EncounterGenerator.tscn" id="2_ytr74"]
[ext_resource type="PackedScene" uid="uid://c1flmv787j6ux" path="res://Encounter/Camera/EncounterCamera.tscn" id="3_aw1jv"]
[ext_resource type="PackedScene" uid="uid://3slf1jfm0pkf" path="res://Encounter/Character/CharacterManager.tscn" id="3_rirl0"]
[ext_resource type="PackedScene" path="res://Encounter/Input/EncounterInputParser.tscn" id="4_8l41m"]
[ext_resource type="PackedScene" uid="uid://cpajlror2lui3" path="res://Encounter/UI/EncounterUiManager.tscn" id="5_6wren"]

[node name="EncounterManager" type="Node2D"]
script = ExtResource( "1_8s06h" )

[node name="EncounterGenerator" parent="." instance=ExtResource( "2_ytr74" )]

[node name="MapManager" parent="." instance=ExtResource( "2_ddvnd" )]

[node name="CharacterManager" parent="." instance=ExtResource( "3_rirl0" )]
z_index = 1

[node name="InputParser" parent="." instance=ExtResource( "4_8l41m" )]

[node name="UiManager" parent="." instance=ExtResource( "5_6wren" )]

[node name="EncounterCamera" parent="." instance=ExtResource( "3_aw1jv" )]
